syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

package Akka.Pathfinder;
option csharp_namespace = "Akka.Pathfinder.Grpc";

service MapManager {
  rpc CreateMap(CreateMapRequest) returns (CreateMapResponse);
  rpc Load(MapRequest) returns(Ack);
  rpc GetMapState(MapRequest) returns (MapStateResponse);
  rpc Delete(MapRequest) returns (DeleteMapResponse);
}

message MapRequest {
  string map_id = 1;
}

message CreateMapRequest {
  string map_id = 1;
  repeated PointConfig points = 2;
}

message CreateMapResponse {
  string map_id = 1;
  bool success = 2;
  string error_message = 3;
  repeated string collection_ids = 4;
  uint32 point_count = 5;
}

message MapStateResponse {
  string map_id = 1;
  bool success = 2;
  string error_message = 3;
  bool is_ready = 4;
}

message DeleteMapResponse {
  bool success = 1;
  string error_message = 2;
}